--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- <button type="button" class="stop" id="stop-aud-recording">
         Stop recording
     </button> -->
-    <footer class="d-flex justify-content-center" style="color: white;
+    <footer class="footers d-flex justify-content-center" style="color: white;
     font-weight: 500;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
     made by Yash🍀</footer>
